--- a/index.html
+++ b/index.html
@@ -751,8 +751,8 @@
                     <div class="footer-column">
                         <h3>Contact</h3>
                         <ul class="footer-links">
-                            <li><i class="fas fa-envelope"></i> support@pipprofit.com</li>
-                            <li><i class="fas fa-phone"></i> +234 812 345 6789</li>
+                            <li><i class="fas fa-envelope"></i> Kenechukwu130@gmail.com</li>
+                            <li><i class="fas fa-phone"></i> +234 9153072571</li>
                             <li><i class="fas fa-map-marker-alt"></i> Lagos, Nigeria</li>
                         </ul>
                     </div>
@@ -1045,11 +1045,11 @@
         
         // Simulated user data
         const users = [
-            { id: 1, name: 'John Trader', email: 'john@example.com', subscription: 'Premium', payment: '₦1,500', joinDate: '2023-01-15' },
-            { id: 2, name: 'Sarah Forex', email: 'sarah@example.com', subscription: 'Premium', payment: '$9.99', joinDate: '2023-02-20' },
-            { id: 3, name: 'Mike Investor', email: 'mike@example.com', subscription: 'Premium', payment: '£7.99', joinDate: '2023-03-10' },
-            { id: 4, name: 'Emily Stocks', email: 'emily@example.com', subscription: 'Basic', payment: 'Free', joinDate: '2023-04-05' },
-            { id: 5, name: 'David Exchange', email: 'david@example.com', subscription: 'Premium', payment: '€8.99', joinDate: '2023-05-18' }
+            { id: 1, name: 'John Trader', email: 'john@gmail.com', subscription: 'Premium', payment: '₦1,500', joinDate: '2023-01-15' },
+            { id: 2, name: 'Sarah Forex', email: 'sarah@gmail.com', subscription: 'Premium', payment: '$9.99', joinDate: '2023-02-20' },
+            { id: 3, name: 'Mike Investor', email: 'mike@gmail.com', subscription: 'Premium', payment: '£7.99', joinDate: '2023-03-10' },
+            { id: 4, name: 'Emily Stocks', email: 'emily@gmail.com', subscription: 'Basic', payment: 'Free', joinDate: '2023-04-05' },
+            { id: 5, name: 'David Exchange', email: 'david@gmail.com', subscription: 'Premium', payment: '€8.99', joinDate: '2023-05-18' }
         ];
         
         // Populate user table
